# hexlet-django-blog

./: README.md  pyproject.toml
hexlet_django_blog/: settings.py  urls.py  views.py
hexlet_django_blog/article/: urls.py  views.py
hexlet_django_blog/article/migrations/: 0001_initial.py
hexlet_django_blog/templates/: base.html
hexlet_django_blog/templates/articles/: index.html  update.html
