[tool.poetry]
name = "hexlet-django-blog"
version = "0.1.0"
description = ""
authors = ["Dmitry Zhiryakov <d.a.zhiryakov@yandex.ru>"]
readme = "README.md"
packages = [{include = "hexlet_django_blog"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
